# dflog

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  example.cpp
src/dflog/: CMakeLists.txt  common.cpp  common.h  consoleSink.cpp  consoleSink.h  dflog.h  fileHelper.cpp  fileHelper.h  formatHelper.cpp  formatHelper.h  logger.cpp  logger.h  normalSink.cpp  normalSink.h  sink.h
src/fmt/: CMakeLists.txt
tests/: CMakeLists.txt  README.md  testCompile.sh  testDflog.cpp  testFMT.cpp  testLogLoop.cpp  testNormalSink.cpp  testPerformanceTest.cpp  testTerminalColor.cpp  touch.sh
